@@ -54,9 +54,7 @@ public class SnowflakeDestination extends SwitchingDestination<SnowflakeDestinat
   }
 
   public static boolean useAsyncSnowflake(final JsonNode config) {
-    // this is how we toggle async snowflake on.
-    // final Set<String> stagingLoadingMethods = Collections.emptySet();
-    final Set<String> stagingLoadingMethods = Set.of("standard", "internal staging", "internal-staging", "internal_staging");
+    final Set<String> stagingLoadingMethods = Set.of("internal staging", "internal-staging", "internal_staging");
 
     return Optional.of(config)
             .map(node -> node.get("loading_method"))
